# Movieland

./: .gitignore  Dockerfile  README.md  cli.py  main.py  pyproject.toml
app/: database.py  main.py  models.py
tests/: test_movies.py
