[project]
name = "movieland"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.44",
    "typer>=0.20.0",
    "unicorn[standart]>=2.1.4",
]
